# swagger/datasets.swagger.json
@@ -141,14 +141,14 @@
         ]
       }
     },
-    "/api/v1/dataset/upload": {
+    "/api/v1/dataset/upload/link": {
       "post": {
-        "operationId": "DatasetsService_UploadDataset",
+        "operationId": "DatasetsService_UploadDatasetByLink",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/datasetsUploadDatasetResponse"
+              "$ref": "#/definitions/datasetsUploadDatasetByLinkResponse"
             }
           },
           "default": {
@@ -161,11 +161,10 @@
         "parameters": [
           {
             "name": "body",
-            "description": " (streaming inputs)",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/datasetsUploadDatasetRequest"
+              "$ref": "#/definitions/datasetsUploadDatasetByLinkRequest"
             }
           }
         ],
@@ -230,13 +229,21 @@
     }
   },
   "definitions": {
-    "datasetsCreateDatasetRequest": {
+    "DatasetSchemaSchemaColumn": {
       "type": "object",
       "properties": {
         "name": {
           "type": "string"
         },
-        "link": {
+        "type": {
+          "type": "string"
+        }
+      }
+    },
+    "datasetsCreateDatasetRequest": {
+      "type": "object",
+      "properties": {
+        "name": {
           "type": "string"
         }
       }
@@ -289,9 +296,18 @@
         },
         "columns": {
           "type": "array",
+          "items": {}
+        }
+      }
+    },
+    "datasetsDatasetSchema": {
+      "type": "object",
+      "properties": {
+        "columns": {
+          "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/protobufAny"
+            "$ref": "#/definitions/DatasetSchemaSchemaColumn"
           }
         }
       }
@@ -324,6 +340,9 @@
             "type": "object",
             "$ref": "#/definitions/datasetsDatasetRow"
           }
+        },
+        "schema": {
+          "$ref": "#/definitions/datasetsDatasetSchema"
         },
         "pageInfo": {
           "$ref": "#/definitions/datasetsPageInfo"
@@ -380,29 +399,20 @@
         }
       }
     },
-    "datasetsUploadDatasetRequest": {
+    "datasetsUploadDatasetByLinkRequest": {
       "type": "object",
       "properties": {
-        "filename": {
-          "type": "string"
-        },
-        "chunk": {
+        "datasetID": {
           "type": "string",
-          "format": "byte"
+          "format": "int64"
+        },
+        "url": {
+          "type": "string"
         }
       }
     },
-    "datasetsUploadDatasetResponse": {
-      "type": "object",
-      "properties": {
-        "filename": {
-          "type": "string"
-        },
-        "size": {
-          "type": "integer",
-          "format": "int64"
-        }
-      }
+    "datasetsUploadDatasetByLinkResponse": {
+      "type": "object"
     },
     "protobufAny": {
       "type": "object",
@@ -414,6 +424,14 @@
       },
       "additionalProperties": {},
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\nExample 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\nExample 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+    },
+    "protobufNullValue": {
+      "type": "string",
+      "enum": [
+        "NULL_VALUE"
+      ],
+      "default": "NULL_VALUE",
+      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
     },
     "rpcStatus": {
       "type": "object",
